src/assets/styles/components/_heading.scss
.heading-wrapper {
    margin-bottom: 6.5rem;

    .heading {
        &__secondary {
            margin-bottom: 1.3rem;
            font-size: 3.45rem;
            font-weight: 600;
            letter-spacing: -1.7px;
            color: var(--color-dark-grey);
        }
    
        &__tertiary {
            padding-left: 1px;
            font-size: 1.8rem;
            font-weight: 300;
            letter-spacing: -0.5px;
            color: var(--color-light-grey3);
        }
    }
}

@include respond(phone-sm) {
    .heading-wrapper {
        .heading {
            &__secondary {
                font-size: 2.5rem;
            }

            &__tertiary {
                font-size: 1.6rem;
            }
        }
    }
}

